tests/snapshots/golden_prediction_tests__application_load_balancer.snap
---
source: tests/golden_prediction_tests.rs
assertion_line: 236
expression: output
---
{
  "confidence_score": 0.95,
  "monthly_cost": 25.0,
  "prediction_interval_high": 32.5,
  "prediction_interval_low": 17.5,
  "resource_id": "aws_lb.main"
}
