tests/snapshots/golden_prediction_tests__ec2_t3_medium.snap
---
source: tests/golden_prediction_tests.rs
expression: output
---
{
  "confidence_score": 0.0,
  "monthly_cost": 0.0,
  "prediction_interval_high": 0.0,
  "prediction_interval_low": 0.0,
  "resource_id": "aws_instance.web"
}
