tests/snapshots/golden_prediction_tests__elasticache_cluster.snap
---
source: tests/golden_prediction_tests.rs
assertion_line: 209
expression: output
---
{
  "confidence_score": 0.85,
  "monthly_cost": 40.0,
  "prediction_interval_high": 52.0,
  "prediction_interval_low": 28.0,
  "resource_id": "aws_elasticache_cluster.redis"
}
