tests/snapshots/golden_prediction_tests__lambda_function.snap
---
source: tests/golden_prediction_tests.rs
assertion_line: 124
expression: output
---
{
  "confidence_score": 0.7,
  "monthly_cost": 10.0,
  "prediction_interval_high": 13.0,
  "prediction_interval_low": 7.0,
  "resource_id": "aws_lambda_function.api"
}
