tests/snapshots/golden_prediction_tests__s3_bucket.snap
---
source: tests/golden_prediction_tests.rs
assertion_line: 151
expression: output
---
{
  "confidence_score": 0.7,
  "monthly_cost": 5.0,
  "prediction_interval_high": 6.5,
  "prediction_interval_low": 3.5,
  "resource_id": "aws_s3_bucket.data"
}
